<resources>
    <string name="app_name">RoomLibraryExample</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="google_maps_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD_BFzB2kfdXik4X4BoWinHKCmvCNpXifY</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_description">Description</string>
    <string name="restaurant_open_time">Open Time</string>
    <string name="register_close_time">Close Time</string>
    <string name="register_save">Save</string>
    <string name="restaurant_address"><u>Address</u></string>
    <string name="please_wait">Please wait...</string>
</resources>
